// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hubs is falsy 1`] = `""`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding_left"
>
  <Connect(AdminHubsComp)
    actionNodes={
      Array [
        <SideOptionsBox
          content={
            <div
              className="flex-100 layout-row layout-wrap layout-align-center-start"
            >
              
              <CollapsingBar
                collapsed={true}
                content={
                  <div>
                    <div
                      className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                    >
                      <p
                        className="flex-100 center"
                      >
                        Download Hubs Sheet
                      </p>
                      <Connect(DocumentsDownloader)
                        t={[Function]}
                        target="hubs"
                        theme={
                          Object {
                            "colors": Object {
                              "primary": "#333",
                              "secondary": "#fafafa",
                            },
                          }
                        }
                      />
                    </div>
                    <div
                      className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                    >
                      <p
                        className="flex-100 center"
                      >
                        Download Charge Definitions Sheet
                      </p>
                      <Connect(DocumentsDownloader)
                        t={[Function]}
                        target="charge_categories"
                        theme={
                          Object {
                            "colors": Object {
                              "primary": "#333",
                              "secondary": "#fafafa",
                            },
                          }
                        }
                      />
                    </div>
                    <div>
                      <div
                        className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                      >
                        <p
                          className="flex-100 center"
                        >
                          Download {{mot}} Local Charges Sheet
                        </p>
                        <Connect(DocumentsDownloader)
                          options={
                            Object {
                              "mot": "all",
                            }
                          }
                          t={[Function]}
                          target="local_charges"
                          theme={
                            Object {
                              "colors": Object {
                                "primary": "#333",
                                "secondary": "#fafafa",
                              },
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                }
                contentHeader=""
                faClass="fa fa-cloud-download"
                handleCollapser={[Function]}
                headerWrapClasses=""
                hideIcon={false}
                mainWrapperStyle={Object {}}
                minHeight=""
                parentClass=""
                showArrow={true}
                showArrowSpacer={false}
                startCollapsed={false}
                styleHeader={
                  Object {
                    "background": "#E0E0E0",
                    "color": "#4F4F4F",
                  }
                }
                text="Download Data"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
                wrapperContentClasses=""
              />
              
            </div>
          }
          flexOptions="flex"
          header="Data manager"
        />,
      ]
    }
    handleClick={[Function]}
    t={[Function]}
  />
</div>
`;

exports[`user.internal is truthy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding_left"
>
  <Connect(AdminHubsComp)
    actionNodes={
      Array [
        <SideOptionsBox
          content={
            <div
              className="flex-100 layout-row layout-wrap layout-align-center-start"
            >
              <CollapsingBar
                collapsed={true}
                content={
                  <div>
                    <div
                      className="action_section flex-100 layout-row layout-align-center-center layout-wrap"
                    >
                      <p
                        className="flex-100 center"
                      >
                        Upload Hubs Sheet
                      </p>
                      <FileUploader
                        dispatchFn={[Function]}
                        formClasses=""
                        size="small"
                        square={false}
                        t={[Function]}
                        text="Hub .xlsx"
                        theme={
                          Object {
                            "colors": Object {
                              "primary": "#333",
                              "secondary": "#fafafa",
                            },
                          }
                        }
                        tooltip=""
                        type="xlsx"
                        uploadFn={null}
                        url="/admin/hubs/process_csv"
                      />
                    </div>
                    <div
                      className="action_section flex-100 layout-row layout-align-center-center layout-wrap"
                    >
                      <p
                        className="flex-100 center"
                      >
                        Upload Charge Definitions Sheet
                      </p>
                      <FileUploader
                        dispatchFn={null}
                        formClasses=""
                        size="small"
                        square={false}
                        t={[Function]}
                        text="Charge Definitions .xlsx"
                        theme={
                          Object {
                            "colors": Object {
                              "primary": "#333",
                              "secondary": "#fafafa",
                            },
                          }
                        }
                        tooltip=""
                        type="xlsx"
                        uploadFn={null}
                        url="/admin/hubs/process_csv"
                      />
                    </div>
                    <div>
                      <div
                        className="action_section flex-100 layout-row layout-align-center-center layout-wrap"
                      >
                        <p
                          className="flex-100 center"
                        >
                          Upload {{mot}} Local Charges Sheet
                        </p>
                        <FileUploader
                          dispatchFn={[Function]}
                          formClasses=""
                          size="small"
                          square={false}
                          t={[Function]}
                          text="Hub .xlsx"
                          theme={
                            Object {
                              "colors": Object {
                                "primary": "#333",
                                "secondary": "#fafafa",
                              },
                            }
                          }
                          tooltip=""
                          type="xlsx"
                          uploadFn={null}
                          url="/admin/service_charges/process_csv"
                        />
                      </div>
                    </div>
                  </div>
                }
                contentHeader=""
                faClass="fa fa-cloud-upload"
                handleCollapser={[Function]}
                headerWrapClasses=""
                hideIcon={false}
                mainWrapperStyle={Object {}}
                minHeight=""
                parentClass=""
                showArrow={true}
                showArrowSpacer={false}
                startCollapsed={false}
                styleHeader={
                  Object {
                    "background": "#E0E0E0",
                    "color": "#4F4F4F",
                  }
                }
                text="Upload Data"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
                wrapperContentClasses=""
              />
              <CollapsingBar
                collapsed={true}
                content={
                  <div>
                    <div
                      className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                    >
                      <p
                        className="flex-100 center"
                      >
                        Download Hubs Sheet
                      </p>
                      <Connect(DocumentsDownloader)
                        t={[Function]}
                        target="hubs"
                        theme={
                          Object {
                            "colors": Object {
                              "primary": "#333",
                              "secondary": "#fafafa",
                            },
                          }
                        }
                      />
                    </div>
                    <div
                      className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                    >
                      <p
                        className="flex-100 center"
                      >
                        Download Charge Definitions Sheet
                      </p>
                      <Connect(DocumentsDownloader)
                        t={[Function]}
                        target="charge_categories"
                        theme={
                          Object {
                            "colors": Object {
                              "primary": "#333",
                              "secondary": "#fafafa",
                            },
                          }
                        }
                      />
                    </div>
                    <div>
                      <div
                        className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                      >
                        <p
                          className="flex-100 center"
                        >
                          Download {{mot}} Local Charges Sheet
                        </p>
                        <Connect(DocumentsDownloader)
                          options={
                            Object {
                              "mot": "all",
                            }
                          }
                          t={[Function]}
                          target="local_charges"
                          theme={
                            Object {
                              "colors": Object {
                                "primary": "#333",
                                "secondary": "#fafafa",
                              },
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                }
                contentHeader=""
                faClass="fa fa-cloud-download"
                handleCollapser={[Function]}
                headerWrapClasses=""
                hideIcon={false}
                mainWrapperStyle={Object {}}
                minHeight=""
                parentClass=""
                showArrow={true}
                showArrowSpacer={false}
                startCollapsed={false}
                styleHeader={
                  Object {
                    "background": "#E0E0E0",
                    "color": "#4F4F4F",
                  }
                }
                text="Download Data"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
                wrapperContentClasses=""
              />
              <CollapsingBar
                collapsed={true}
                content={
                  <div
                    className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                  >
                    <div
                      className="flex-none layout-row"
                    >
                      <RoundButton
                        active={true}
                        back={false}
                        classNames=""
                        disabled={false}
                        flexContainer="100"
                        handleDisabled={null}
                        handleNext={[Function]}
                        icon=""
                        iconClass="fa-plus"
                        inverse={false}
                        size="small"
                        text="New Hub"
                        theme={
                          Object {
                            "colors": Object {
                              "primary": "#333",
                              "secondary": "#fafafa",
                            },
                          }
                        }
                      />
                    </div>
                  </div>
                }
                contentHeader=""
                faClass="fa fa-plus-circle"
                handleCollapser={[Function]}
                headerWrapClasses=""
                hideIcon={false}
                mainWrapperStyle={Object {}}
                minHeight=""
                parentClass=""
                showArrow={true}
                showArrowSpacer={false}
                startCollapsed={false}
                styleHeader={
                  Object {
                    "background": "#E0E0E0",
                    "color": "#4F4F4F",
                  }
                }
                text="Create New Hub"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
                wrapperContentClasses=""
              />
            </div>
          }
          flexOptions="flex"
          header="Data manager"
        />,
      ]
    }
    handleClick={[Function]}
    t={[Function]}
  />
</div>
`;
